- Generic Crud, Modal

--- a/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -29,11 +29,17 @@
             <td>{{ curso.nome }}</td>
             <td>
               <span class="float-right">
-                <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(curso.id)">
+                <button
+                  class="btn btn-outline-warning mb-1 btn-sm"
+                  (click)="onEdit(curso.id)"
+                >
                   Atualizar
                 </button>
 
-                <button class="btn btn-outline-danger mb-1 btn-sm">
+                <button
+                  class="btn btn-outline-danger mb-1 btn-sm"
+                  (click)="onDelete(curso)"
+                >
                   Remover
                 </button>
               </span>
@@ -53,3 +59,15 @@
     </div>
   </div>
 </div>
+
+<ng-template #deleteModal>
+  <div class="modal-body text-center">
+    <p>Tem certeza que deseja remover este curso?</p>
+    <button type="button" class="btn btn-default" (click)="onConfirmDelete()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="onDeclineDelete()">
+      Não
+    </button>
+  </div>
+</ng-template>
