--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,38 @@
       <!-- <span class="navbar-toggler-icon"></span> -->
     </button>
     <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> -->
-      <div class="navbar-nav">
-        <a class="nav-link" aria-current="page" [routerLink]="['/']" routerLinkActive="active">Home</a>
-        <a class="nav-link" [routerLink]="'/cursos'" routerLinkActive="active">Cursos</a>
-        <a class="nav-link" [routerLink]="'/rxjs-poc'" routerLinkActive="active">Rx POC</a>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="['/']"
+            routerLinkActive="active"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/cursos'" routerLinkActive="active"
+            >Cursos</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            [routerLink]="'/rxjs-poc'"
+            routerLinkActive="active"
+            >Rx POC</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/upload'" routerLinkActive="active"
+            >Upload Arquivo</a
+          >
+        </li>
+      </ul>
     </div>
+  </div>
   <!-- </div> -->
 </nav>
 
