- fileUpload, nodeJs server, multiparty-form

--- a/src/app/upload-file/upload-file/upload-file.component.html
+++ b/src/app/upload-file/upload-file/upload-file.component.html
@@ -16,4 +16,13 @@
       multiple
     />
   </div>
+  <button
+    type="button"
+    class="btn btn-primary"
+    id="fileButton"
+    (click)="onUpload()"
+    [disabled]="!inputFile"
+  >
+    Enviar
+  </button>
 </div>
