--- a/src/app/upload-file/upload-file/upload-file.component.html
+++ b/src/app/upload-file/upload-file/upload-file.component.html
@@ -15,6 +15,15 @@
       (change)="onChange($event)"
       multiple
     />
+    <div class="progress">
+      <div
+        class="progress-bar"
+        role="progressbar"
+        [style.width]="progress + '%'"
+      >
+        {{ progress }}
+      </div>
+    </div>
   </div>
   <button
     type="button"
